[package]
name = "JJW"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.5.7"
rocket = { version = "0.5.0"}
ws = { package = "rocket_ws", version = "0.1.0" }

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars"]
