[package]
name = "JJW"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
rocket = { version = "0.5.0", features = ["json"]}
surrealdb = { version = "1.2.0", features = ["kv-rocksdb"] }

